[gd_scene load_steps=19 format=3 uid="uid://dyl1u24g3ijwt"]

[ext_resource type="Script" uid="uid://hetngxyrg1ew" path="res://scenes/gm_classic.gd" id="1_gul3y"]
[ext_resource type="PackedScene" uid="uid://b02ynnw41oert" path="res://scenes/ball.tscn" id="2_7yik3"]
[ext_resource type="Script" uid="uid://dqj05fijsqioc" path="res://scenes/cup_visual.gd" id="3_vwm73"]
[ext_resource type="Script" uid="uid://bwtc2gntnfdlt" path="res://scenes/next_ball_preview.gd" id="4_f8kcq"]
[ext_resource type="Script" uid="uid://bux5l6mjthj7l" path="res://scenes/merge_preview.gd" id="5_7txaf"]
[ext_resource type="Script" uid="uid://bny0un5xte8" path="res://scenes/current_ball_ghost.gd" id="6_aqpa1"]
[ext_resource type="FontFile" uid="uid://ccn8nkkjktpb2" path="res://Font/bahnschrift.ttf" id="7_5awlt"]
[ext_resource type="StyleBox" uid="uid://ux2l8gncw7cq" path="res://scenes/button_blue.tres" id="8_bcbe6"]
[ext_resource type="StyleBox" uid="uid://dhflx8syuyoya" path="res://scenes/button_blue_pressed.tres" id="9_5hx5k"]
[ext_resource type="PackedScene" uid="uid://c1w4yduqehcwb" path="res://UI/popups/BasePopup.tscn" id="10_7yik3"]
[ext_resource type="Script" uid="uid://b7d03bpnepo63" path="res://scenes/game_over_line.gd" id="10_pf6oh"]
[ext_resource type="StyleBox" uid="uid://dfb68p5x5hl7x" path="res://scenes/focus.tres" id="10_vwm73"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8cj0n"]
size = Vector2(20, 450)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uwrxv"]
size = Vector2(380, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_p57ef"]
radius = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p57ef"]
size = Vector2(810, 1114)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vtaks"]
bg_color = Color(0.4745098, 0.5254902, 0.79607844, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.2901961, 0.32156864, 0.49803922, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0tnpc"]

[node name="gm_classic" type="Node2D"]
script = ExtResource("1_gul3y")
ball_scene = ExtResource("2_7yik3")

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = -100000
limit_top = -100000
limit_right = 100000
limit_bottom = 100000
editor_draw_limits = true

[node name="Cup" type="Node2D" parent="."]

[node name="WallLeft" type="StaticBody2D" parent="Cup"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cup/WallLeft"]
modulate = Color(0.7326874, 0.6965349, 0.6234534, 1)
position = Vector2(-180, 44)
shape = SubResource("RectangleShape2D_8cj0n")
debug_color = Color(1, 1, 1, 1)

[node name="WallRight" type="StaticBody2D" parent="Cup"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cup/WallRight"]
modulate = Color(0.7326874, 0.6965349, 0.6234534, 1)
position = Vector2(180, 44)
shape = SubResource("RectangleShape2D_8cj0n")
debug_color = Color(1, 1, 1, 1)

[node name="Floor" type="StaticBody2D" parent="Cup"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cup/Floor"]
modulate = Color(0.7326874, 0.6965349, 0.6234534, 1)
position = Vector2(0, 260)
shape = SubResource("RectangleShape2D_uwrxv")
debug_color = Color(1, 1, 1, 1)

[node name="CupVisual" type="Node2D" parent="Cup"]
script = ExtResource("3_vwm73")

[node name="CornerLeft" type="StaticBody2D" parent="Cup"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cup/CornerLeft"]
position = Vector2(-180, -180)
shape = SubResource("CircleShape2D_p57ef")
disabled = true

[node name="CornerRight" type="StaticBody2D" parent="Cup"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cup/CornerRight"]
position = Vector2(180, -180)
shape = SubResource("CircleShape2D_p57ef")
disabled = true

[node name="GameArea" type="Area2D" parent="Cup"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cup/GameArea"]
position = Vector2(0, 307)
shape = SubResource("RectangleShape2D_p57ef")

[node name="NextBallPreview" type="Node2D" parent="." node_paths=PackedStringArray("game")]
position = Vector2(260, -220)
script = ExtResource("4_f8kcq")
game = NodePath("..")

[node name="MergePreview" type="Node2D" parent="." node_paths=PackedStringArray("game")]
position = Vector2(-220, 270)
rotation = -3.1415927
script = ExtResource("5_7txaf")
game = NodePath("..")
scale_ball = 0.4
padding = 20.0
tilt = 0.05

[node name="CurrentBallGhost" type="Node2D" parent="." node_paths=PackedStringArray("game")]
script = ExtResource("6_aqpa1")
game = NodePath("..")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
offset_left = -270.0
offset_top = -400.0
offset_right = -209.0
offset_bottom = -377.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0.7372549, 0.8039216, 0.93333334, 1)
theme_override_fonts/font = ExtResource("7_5awlt")
text = "Score: 0"
vertical_alignment = 1

[node name="GameOverLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = -1
anchor_left = -0.60916674
anchor_top = -0.30275002
anchor_right = 0.60716665
anchor_bottom = 0.43996876
offset_left = -0.6999817
offset_top = 70.76001
offset_right = 2.4199982
offset_bottom = -304.08002
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.73767096, 0.8025924, 0.93375707, 1)
theme_override_fonts/font = ExtResource("7_5awlt")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_vtaks")
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="BestLabel" type="Label" parent="CanvasLayer"]
offset_left = -270.0
offset_top = -500.0
offset_right = -175.0
offset_bottom = -477.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0.7372549, 0.8039216, 0.93333334, 1)
theme_override_fonts/font = ExtResource("7_5awlt")
text = "Best: 0"
vertical_alignment = 1

[node name="MenuButton" type="Button" parent="CanvasLayer"]
offset_left = 202.0
offset_top = -500.0
offset_right = 277.0
offset_bottom = -425.0
theme_override_colors/font_color = Color(0.7372549, 0.8039216, 0.93333334, 1)
theme_override_fonts/font = ExtResource("7_5awlt")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = ExtResource("8_bcbe6")
theme_override_styles/pressed = ExtResource("9_5hx5k")
theme_override_styles/hover = ExtResource("8_bcbe6")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0tnpc")
theme_override_styles/focus = ExtResource("10_vwm73")
text = "PH"

[node name="RestartButton" type="Button" parent="CanvasLayer"]
process_mode = 3
visible = false
offset_left = -83.0
offset_top = 11.0
offset_right = 86.0
offset_bottom = 86.0
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.7372549, 0.8039216, 0.93333334, 1)
theme_override_fonts/font = ExtResource("7_5awlt")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("8_bcbe6")
theme_override_styles/pressed = ExtResource("9_5hx5k")
theme_override_styles/hover = ExtResource("8_bcbe6")
theme_override_styles/focus = ExtResource("10_vwm73")
text = "Restart"

[node name="MainMenuButton" type="Button" parent="CanvasLayer"]
visible = false
offset_left = -96.0
offset_top = 6.0
offset_right = 103.0
offset_bottom = 81.0
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.7372549, 0.8039216, 0.93333334, 1)
theme_override_fonts/font = ExtResource("7_5awlt")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("8_bcbe6")
theme_override_styles/pressed = ExtResource("9_5hx5k")
theme_override_styles/hover = ExtResource("8_bcbe6")
theme_override_styles/focus = ExtResource("10_vwm73")
text = "Main Menu"

[node name="PausePopup" parent="CanvasLayer" instance=ExtResource("10_7yik3")]
visible = false
anchor_left = -2.197
anchor_top = -1.1520001
offset_left = -145.08002
offset_top = -229.71997
offset_right = 630.0
offset_bottom = 301.0

[node name="ResumeButton" type="Button" parent="CanvasLayer/PausePopup"]
layout_mode = 0
offset_left = 860.0
offset_top = 780.0
offset_right = 1011.0
offset_bottom = 867.0
theme_override_fonts/font = ExtResource("7_5awlt")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("8_bcbe6")
theme_override_styles/pressed = ExtResource("9_5hx5k")
theme_override_styles/hover = ExtResource("8_bcbe6")
theme_override_styles/focus = ExtResource("10_vwm73")
text = "Resume"

[node name="SettingsButton" type="Button" parent="CanvasLayer/PausePopup"]
layout_mode = 0
offset_left = 860.0
offset_top = 900.0
offset_right = 1013.0
offset_bottom = 987.0
theme_override_fonts/font = ExtResource("7_5awlt")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("8_bcbe6")
theme_override_styles/pressed = ExtResource("9_5hx5k")
theme_override_styles/hover = ExtResource("8_bcbe6")
theme_override_styles/focus = ExtResource("10_vwm73")
text = "Settings"

[node name="ExitButton" type="Button" parent="CanvasLayer/PausePopup"]
layout_mode = 0
offset_left = 820.0
offset_top = 1037.0
offset_right = 1051.0
offset_bottom = 1124.0
theme_override_fonts/font = ExtResource("7_5awlt")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("8_bcbe6")
theme_override_styles/pressed = ExtResource("9_5hx5k")
theme_override_styles/hover = ExtResource("8_bcbe6")
theme_override_styles/focus = ExtResource("10_vwm73")
text = "Exit to menu"

[node name="SettingsPopup" parent="CanvasLayer" instance=ExtResource("10_7yik3")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -204.0
offset_right = -180.0
offset_bottom = -204.0
scale = Vector2(2, 2)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="CanvasLayer/SettingsPopup" groups=["config_popup"]]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.380005
offset_top = -166.0
offset_right = 54.619995
offset_bottom = -135.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("7_5awlt")
theme_override_font_sizes/font_size = 30
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sound" type="CheckBox" parent="CanvasLayer/SettingsPopup" groups=["config_popup"]]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -132.0
offset_right = 38.0
offset_bottom = -98.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_5awlt")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = ExtResource("10_vwm73")
disabled = true
text = "Sound"

[node name="Music" type="CheckBox" parent="CanvasLayer/SettingsPopup" groups=["config_popup"]]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -92.0
offset_right = 33.0
offset_bottom = -58.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_5awlt")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = ExtResource("10_vwm73")
disabled = true
text = "Music"

[node name="Vibration" type="CheckBox" parent="CanvasLayer/SettingsPopup" groups=["config_popup"]]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -52.0
offset_right = 69.0
offset_bottom = -18.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_5awlt")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = ExtResource("10_vwm73")
text = "Vibration"

[node name="Aim" type="CheckBox" parent="CanvasLayer/SettingsPopup" groups=["config_popup"]]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 22.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_5awlt")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = ExtResource("10_vwm73")
text = "Aim"

[node name="CloseSettings" type="Button" parent="CanvasLayer/SettingsPopup" groups=["config_popup"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.380005
offset_top = 52.299988
offset_right = 24.619995
offset_bottom = 83.29999
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_5awlt")
theme_override_font_sizes/font_size = 29
theme_override_styles/normal = ExtResource("8_bcbe6")
theme_override_styles/pressed = ExtResource("9_5hx5k")
theme_override_styles/hover = ExtResource("8_bcbe6")
theme_override_styles/focus = ExtResource("10_vwm73")
text = "Apply"

[node name="Panel2" type="Panel" parent="CanvasLayer/SettingsPopup"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.380005
offset_top = -212.7
offset_right = 97.619995
offset_bottom = 111.3
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("8_bcbe6")

[node name="GameOverLine" type="Node2D" parent="."]
script = ExtResource("10_pf6oh")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0.14705983, 0.1612125, 0.20177579, 1)
show_behind_parent = true
z_index = -5
offset_left = -805.0
offset_top = -759.0
offset_right = 868.0
offset_bottom = 986.0
mouse_filter = 2
metadata/_edit_lock_ = true

[connection signal="mouse_entered" from="Cup/GameArea" to="." method="_on_game_area_mouse_entered"]
[connection signal="mouse_exited" from="Cup/GameArea" to="." method="_on_game_area_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="CanvasLayer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PausePopup/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PausePopup/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PausePopup/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="toggled" from="CanvasLayer/SettingsPopup/Vibration" to="." method="_on_vibration_toggled"]
[connection signal="toggled" from="CanvasLayer/SettingsPopup/Aim" to="." method="_on_aim_toggled"]
[connection signal="pressed" from="CanvasLayer/SettingsPopup/CloseSettings" to="." method="_on_close_settings_pressed"]
